@@ -195,6 +195,8 @@ rb_encoding *rb_default_internal_encoding(void);
 int rb_ascii8bit_encindex(void);
 int rb_utf8_encindex(void);
 int rb_usascii_encindex(void);
+int rb_locale_encindex(void);
+int rb_filesystem_encindex(void);
 VALUE rb_enc_default_external(void);
 VALUE rb_enc_default_internal(void);
 void rb_enc_set_default_external(VALUE encoding);
